# rs_chip8

./: Cargo.toml  LICENSE.txt
arduboy/: Cargo.toml  avr-atmega32u4.json
arduboy/.cargo/: config.toml
arduboy/src/: main.rs
core/: Cargo.toml
core/src/: default_font.rs  lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
rs_chip8_arduboy/: Cargo.toml
rs_chip8_arduboy/src/: main.rs
rs_chip8_core/: Cargo.toml
rs_chip8_core/src/: lib.rs
rs_chip8_desktop/: Cargo.toml
rs_chip8_desktop/src/: main.rs
src/: core.rs  main.rs
