[package]
name = "rs_chip8_arduboy"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
embedded-graphics = "0.8"
panic-halt = "1.0"
ssd1306 = "0.9"
ufmt = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3c089795cadbbc7fa83f45958128689fee7ba1e4"
features = ["arduino-leonardo"]
