[package]
name = "rs_chip8_desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rs_chip8_core = { path = "../core" }
thiserror = "2.0"
sdl3 = "0.14"
rand = "0.9"

[target.'cfg(windows)'.dependencies]
sdl3 = { version = "0.14", features = ["build-from-source"] }
